turtleart.flower.Flower.scala.error
Erreur de compilation :
Flower:6: error: value avance is not a member of Unit
possible cause: maybe a semicolon is missing before `value avance'?
    } avance(25); droite(360.0/8.0); avance(25);gauche(360.0/8.0);droite(90)
      ^